--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+body{
+  background-image: url('../Images/small-memory-8k-2a.jpg');
+  height: 100vh4;
+  background-size: cover;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+header{
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #969B9C ;
+  min-width: 160px;
+  z-index: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: gray}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+/*Botones de Opciones*/
+#GButtons{
+  position: relative;
+  top:50px;
+  left:20px;
+}
+/*Apartado donde entrada y sale  el codigo a analizar y el resultado*/
+#InOutCode{
+  position: relative;
+  top: 70px;
+}
+/* Output Consola */
+#consoleLfs{
+  height: 100%;
+  padding: 5px;
+  background-color: white;
+  box-sizing: border-box;
+  overflow: scroll; 
+  overflow-y: scroll; 
+  overflow-x: scroll; 
+  overflow:-moz-scrollbars-vertical;
+  white-space: pre;
+}
+/*TEXT AREA*/
+.tAreaW{
+  position: relative;
+  color: black;
+  width: 100%;
+  height: 400px;
+  resize: none;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 5px;
+  /*
+  */
 }
