--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,14 +34,15 @@ header{
 }
 /*Botones de Opciones*/
 #GButtons{
-  position: relative;
-  top:50px;
+  position: absolute;
+  top:30px;
   left:20px;
 }
 /*Apartado donde entrada y sale  el codigo a analizar y el resultado*/
 #InOutCode{
-  position: relative;
+  position: absolute;
   top: 70px;
+  padding: 0;
 }
 /* Output Consola */
 #consoleLfs{
@@ -61,7 +62,7 @@ header{
   left: 30px;
   color: black;
   width: 100%;
-  height: 400px;
+  height: 450px;
   resize: none;
   font-family: Arial, Helvetica, sans-serif;
   padding: 5px;
